Fixed spacing

--- a/css/stylesheritage2.css
+++ b/css/stylesheritage2.css
@@ -93,49 +93,60 @@ body {
 }
 
 #title {
-  margin-top: 2em;
-  padding-right: 26.5em;
+
+  max-width: 924px;
+  text-align: left;
   font-family: 'Do Hyeon', sans-serif;
   font-size: 25px;
+  margin: 0 auto;
+  padding-top: 2em;
 
 }
 
 #title2 {
-  margin-top: 2em;
-  padding-right: 34.7em;
+  max-width: 924px;
+  text-align: left;
+  margin: 0 auto;
   font-family: 'Do Hyeon', sans-serif;
   font-size: 25px;
   margin-bottom: 1em;
+  padding-top: 2em;
 }
 #title3 {
-  margin-top: 2em;
-  padding-right: 27.6em;
+  max-width: 924px;
+  text-align: left;
+  margin: 0 auto;
   font-family: 'Do Hyeon', sans-serif;
   font-size: 25px;
   margin-bottom: 2em;
 }
 #titleheritage1 {
-  margin-top: 2em;
-  padding-right: 30.4em;
+  max-width: 924px;
+  text-align: left;
+  margin: 0 auto;
   font-family: 'Do Hyeon', sans-serif;
   font-size: 25px;
-  margin-bottom: 2em;
+
+  padding-top: 2em;
 }
 
 #titledc {
-  margin-top: 2em;
-  padding-right: 15em;
+  max-width: 924px;
+  text-align: left;
+  margin: 0 auto;
   font-family: 'Do Hyeon', sans-serif;
   font-size: 25px;
   margin-bottom: 2em;
+  padding-top: 2em;
 }
 
 #titlemt {
-  margin-top: 2em;
-  padding-right: 30em;
+  max-width: 924px;
+  text-align: left;
+  margin: 0 auto;
   font-family: 'Do Hyeon', sans-serif;
   font-size: 25px;
-  margin-bottom: 2em;
+  padding-top: 2em;
 }
 
 #mount {
@@ -150,7 +161,7 @@ body {
   font-size: 15px;
   max-width: 924px;
   margin:0 auto;
-
+  margin-bottom: 3em;
 }
 
 #mountdesc02 {
@@ -171,6 +182,7 @@ body {
   font-size: 15px;
 max-width: 924px;
 margin:0 auto;
+margin-bottom: 2em;
 }
 
 #description {
@@ -180,5 +192,5 @@ margin:0 auto;
   font-size: 15px;
   max-width: 924px;
   margin:0 auto;
-
+margin-bottom: 2em;
 }
